--- a/package.json
+++ b/package.json
@@ -1,39 +1,5 @@
 {
-  "name": "marketing-page",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite --host",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.6",
-    "antd": "^5.24.1",
-    "framer-motion": "^12.4.4",
-    "lucide-react": "^0.475.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0",
-    "react-parallax-tilt": "^1.7.284",
-    "react-router-dom": "^7.2.0",
-    "react-typed": "^2.0.12",
-    "tailwindcss": "^4.0.6"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.19.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
-    "prettier": "^3.5.1",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "vite": "^6.1.0"
+    "nodemailer": "^6.10.0"
   }
 }
