--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gevinn99.github.io/maternify-marketing-page",
+  "homepage": "https://maternify.info/",
   "name": "marketing-page",
   "private": true,
   "version": "0.0.0",
